# Pocaml

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  ast.mli  driver  driver.ml  driver.tb  dune-project  parser.mly  pocaml  pocaml.opam  pocamlc  runDocker  scanner.mll  test_lambda_1.ml  testall.sh
builtins/: Makefile  _add.c  _and.c  _apply_closure.c  _cons.c  _divide.c  _equal.c  _error.c  _get_arg.c  _greater_equal.c  _greater_than.c  _init.c  _less_equal.c  _less_than.c  _make_closure.c  _make_primitives.c  _minus.c  _not_equal.c  _or.c  _pattern_match.c  _seq.c  _times.c  add.c  builtins.h  builtins.ml  error.c  get_types.c  print_string.c  string_of_bool.c  string_of_char.c  string_of_int.c
doc/: .gitignore  Makefile  pocaml-lrm.tex
lib/: ast.ml  builtins.ml  codegen.ml  defunctionalize.ml  dune  fresh.ml  ir.ml  lambda_lift.ml  lexer.mll  lower_ast.ml  monomorphize.ml  op.ml  parser.mly  print.ml  print_ir.ml  type.ml  type_infer.ml
stdlib/: stdlib.pml
stupid/: dune  stupid.ml
stupidlib/: codegen.ml  dune
test/: dune
test/ast/: def.ml  dune  expr.ml  pattern_matching.ml
test/builtins/: closure  closure.c
test/demo/: demo1.pml  demo_graphs.pml
test/ir/: def.ml  dune  expr.ml  lambda_lift.ml
test/pml/: fail_1.pml  fail_and_1.pml  fail_apply_1.err  fail_apply_1.pml  fail_apply_2.pml  fail_binops_1.pml  fail_comments_1.err  fail_comments_1.pml  fail_conditional_1.pml  fail_conditional_2.pml  fail_cons_1.err  fail_cons_1.pml  fail_cons_2.pml  fail_function_1.pml  fail_function_2.pml  fail_function_3.pml  fail_letin_1.err  fail_letin_1.pml  fail_letin_2.err  fail_letin_2.pml  fail_or_1.pml  fail_parse_2.pml  fail_pattern_matching_1.pml  fail_pattern_matching_2.err  fail_pattern_matching_2.pml  fail_pattern_matching_3.err  fail_pattern_matching_3.pml  fail_pattern_matching_4.err  fail_pattern_matching_4.pml  fail_rec_1.pml  fail_std_head_1.err  fail_std_head_1.pml  fail_std_tail_1.pml  fail_stdlib1.pml  fail_stdlib2.pml  fail_stdlib3.err  fail_stdlib3.pml  fail_stdlib4.pml  fail_stdlib5.pml  fail_string_literal.err  (+42 more)
