(library
  (name pocaml))

(alias
  (name default)
  (deps
    (alias lexer)
    (alias parser)))

(rule
 (alias lexer)
 (deps lexer.mll)
 (target lexer.ml)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -q -o %{target} %{deps}))))

(rule
 (alias parser)
 (deps parser.mly)
 (targets parser.ml parser.mli)
 (action (chdir %{workspace_root}
          (run %{bin:ocamlyacc} %{deps}))))

(rule
  (alias yacc_log)
  (deps parser.mly)
  (targets parser.output)
  (action (run ocamlyacc -v %{deps})))